# rsserpent-plugin-zhubai

./: .pre-commit-config.yaml  LICENSE  README.md  mypy.ini  pyproject.toml
.github/workflows/: test.yaml
rsserpent_plugin_zhubai/: __init__.py  route.py
scripts/: update.py
tests/: content.json  test_route.py
